[metadata]
name = pysteamcmd
version = 0.2.0
author = f0rkz
author_email = f0rkz@f0rkznet.net
description = Python package to install and utilize steamcmd
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/f0rkz/pysteamcmd
project_urls =
    Bug Tracker = https://github.com/f0rkz/pysteamcmd/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src